# libnoisesocket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/client/: CMakeLists.txt  client.c
examples/server/: CMakeLists.txt  server.c
ext/noise/protocol/: util.h
ext/noise/src/: cipher-aesgcm.c  cipherstate.c  dhstate.c  randstate.cpp
ext/noise/src/backend/arduino/: hash-blake2b.cpp  util.c
ext/noise/src/backend/sodium/: util.c
include/: noisesocket.h
include/noisesocket/: debug.h  encoding.h  handshake.h  helper.h  negotiation-params.h  negotiation.h  noisesocket-handshake.h  noisesocket-types.h  noisesocket-uv.h  noisesocket.h  types.h
include/noisesocket/backends/: noisesocket-libuv.h
include/noisesocket/private/: debug.h
include/noisesocket/private/noise/protocol/: constants.h  handshakestate.h  signstate.h
protobuf/: handshake.proto  negotiation.proto
protobuf/nanopb/: pb_decode.c
src/: encoding.c  handshake.c  helper.c  negotiation-params.c  negotiation.c  noisesocket-handshake.c  noisesocket-uv.c  noisesocket.c
src/backends/crypto/arduino/: dh-curve25519.cpp  rand_arduino.c
src/backends/crypto/sodium/: cipher-aesgcm.c  rand_sodium.c  sign-ed25519.c  util.c
src/backends/net/: noisesocket-libuv.c
src/noise-protocol/: CMakeLists.txt  cipherstate.c  debug.h  handshakestate.c  hashstate.c  internal.c  internal.h  signstate.c
tests/: CMakeLists.txt  main.c  network.c  protobuf.c
